fixed awkward styling, such as scroll bar that did nothing on firefox and shifting buttons on load

--- a/frontend/html_template/styles.css
+++ b/frontend/html_template/styles.css
@@ -3,7 +3,7 @@ body, button, canvas {
     cursor: url("mouse.png"), auto !important;
 }
 */
-body {
+html, body {
     position: relative;
     margin: 0;
     width: 100%;
@@ -19,7 +19,7 @@ canvas {
 }
 
 .buttons-container {
-    position: absolute;
+    position: fixed;
     right: 0;
     bottom: 50%;
     display: flex;
@@ -57,7 +57,7 @@ button#join-room {
 }
 
 .title {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     padding: 10px;
@@ -105,7 +105,7 @@ button#join-room {
 }
 
 .modal-buttons button {
-    margin: 0.5rem;
+    padding: 0.5rem;
 }
 
 .close-modal-button {
